--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Super Bike server side application ",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start-dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +15,10 @@
     "warehouse-application"
   ],
   "author": "Mohammad Ali (itsproali)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "mongodb": "^4.5.0"
+  }
 }
