--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "keywords": [
     "super-bike",
     "server-side",
-    "inventory-manangement",
+    "inventory-management",
     "warehouse-application"
   ],
   "author": "Mohammad Ali (itsproali)",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongodb": "^4.5.0"
   }
